[metadata]
name = fsgateway
version = 0.1
summary = Hybrid Cloud FusionSphere Gateway service
description-file =
    README.md

author = Huawei
home-page = http://www.huawei.com

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    fsgateway

data_files =
    /etc/fsgateway/ = etc/fsgateway/*
    /usr/bin/ = bin/fsgateway-watchdog

[entry_points]
console_scripts =
    fsgateway-api = fsgateway.server:api
    fsgateway-manage = fsgateway.manage.m:main
    fsgateway-proxy = fsgateway.server:proxy

